# hydrone_aerial_underwater_gazebo

./: README.md
hydrone_aerial_underwater_control/: CMakeLists.txt  package.xml
hydrone_aerial_underwater_control/config/: model_params.yaml  model_params_exact.yaml  thruster_manager.yaml
hydrone_aerial_underwater_control/launch/: record_demo.launch  start_pid_controller.launch
hydrone_aerial_underwater_control/rviz/: hydrone_underwater_control.rviz
hydrone_aerial_underwater_ddpg/: CMakeLists.txt  package.xml
hydrone_aerial_underwater_ddpg/launch/: bug_algorithm.launch  ddpg_2D.launch  ddpg_2D_grando.launch  ddpg_stage_1.launch  ddpg_stage_1_3D.launch  ddpg_stage_1_grando.launch  deep_RL_2D.launch  deep_RL_2D_sub.launch  hydrone_aerial_deep_rl.launch  hydrone_aerial_underwater_ddpg.launch  hydrone_aerial_underwater_ddpg_underwater.launch  hydrone_underwater_deep_rl.launch  lee_controller.launch  sac_2D.launch  sac_stage_1.launch  sac_stage_1_3D.launch
hydrone_aerial_underwater_ddpg/scripts/: bug_algorithm.py  cmd_ddpg_stage_1_air2D_tanh_2layers.csv  cmd_ddpg_stage_1_air2D_tanh_3layers.csv  cmd_ddpg_stage_1_air3D_tanh_3layers.csv  cmd_ddpg_stage_2_air3D_tanh_3layers.csv  cmd_sac_stage_1_air2D_tanh_2layers.csv  cmd_sac_stage_1_air2D_tanh_3layers.csv  cmd_sac_stage_1_air2D_tanh_5layers.csv  cmd_sac_stage_1_air3D_tanh_2layers.csv  cmd_sac_stage_1_air3D_tanh_3layers.csv  combination_obstacle.py  ddpg_2D.py  ddpg_2D_grando.py  ddpg_air2D_hardtanh_3layers.py  ddpg_air2D_tanh_2layers.py  ddpg_air2D_tanh_3layers.py  ddpg_air2D_tanh_3layers_cuda.py  ddpg_air2D_tanh_4layers.py  ddpg_air2D_tanh_5layers.py  ddpg_air2D_tanh_convnet.py  ddpg_air2D_tanh_lstm.py  ddpg_air3D_hardtanh_3layers.py  ddpg_air3D_tanh_2layers.py  ddpg_air3D_tanh_3layers.py  ddpg_air3D_tanh_4layers.py  ddpg_air3D_tanh_5layers.py  ddpg_air3D_tanh_convnet.py  ddpg_air3D_tanh_lstm.py  ddpg_env2_2d.csv  ddpg_stage_1.py  ddpg_stage_1_3D.py  ddpg_stage_1_grando.py  ddpg_sub2D_tanh_3layers.py  environment_2D.py  environment_2D_sonar.py  environment_3D.py  environment_stage_1.py  environment_stage_1_3D.py  multinav_cmd_ddpg_stage_1_air2D_hardtanh_3layers.csv  multinav_cmd_ddpg_stage_1_air2D_tanh_convnet.csv  (+110 more)
hydrone_aerial_underwater_ddpg/worlds/: stage_1.world  stage_1_aerial.world  stage_1_underwater.world  stage_2.world  stage_2_aerial.world  stage_2_underwater.world  stage_3_aerial.world
hydrone_aerial_underwater_description/launch/: upload_hydrone_aerial_underwater.launch
hydrone_aerial_underwater_gazebo/: package.xml
hydrone_aerial_underwater_mission_planner/: CMakeLists.txt  package.xml
hydrone_vision_system/: CMakeLists.txt  package.xml
hydrone_vision_system/src/: hovering_example.cpp  waypoint_publisher_file.cpp
(+20126 files in other folders)
