<?xml version="1.0"?>
<package format="2">
  <name>hydrone_aerial_underwater_control</name>
  <version>0.1.3</version>
  <description>Launch and configuration vehicle.</description>

  <maintainer email="ricardogrando13@gail.com">Ricardo Grando</maintainer>
  
  <author  email="ricardogrando13@gail.com">Ricardo Grando</author>
  
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>uuv_control_cascaded_pid</exec_depend>
  <exec_depend>uuv_thruster_manager</exec_depend>
  <exec_depend>uuv_trajectory_control</exec_depend>
</package>
